--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,7 +9,7 @@
         margin: 0.4cm;
     }
     &-logo {
-        height: 40vmin;
+        height: 400px;
         pointer-events: none;
     }
     &-header {
